# HyperAgent

./: .gitignore  Dockerfile  LSP.py  README.md  agents.py  check_usage.py  cli.py  codebase_search_agents.ipynb  convert_swe.py  debug.txt  exp.py  function_calling.py  install.sh  log.txt  main.py  navigator.py  pyproject.toml  requirements.txt  setup.py  struct.txt  task_instances.jsonl  terminal.py  tools.py  trace_langchain.txt  trace_langchain_include_task_formatted_tools.txt  utils.py
.cache/41/: cache.db
.github/workflows/: python-publish.yml
configs/: claude.yaml  gemini.yaml  gpt4o.yaml  wizardlm2.yaml
data/agent_trajectories/: 100_instance.json  101_instance.json  102_instance.json  103_instance.json  104_instance.json  105_instance.json  106_instance.json  107_instance.json  108_instance.json  109_instance.json  10_instance.json  110_instance.json  111_instance.json  112_instance.json  113_instance.json  114_instance.json  115_instance.json  116_instance.json  117_instance.json  118_instance.json  119_instance.json  (+128 more)
evaluation_benchmark/: README.md
examples/: bug_reproduction.ipynb
hyperagent-ext/: .gitignore  README.md  package-lock.json  package.json
outputs/: claude.jsonl  gpt4o.jsonl  wizardlm2-extend.jsonl  wizardlm2.jsonl
scripts/: convert_swe.py  data_generation.py  data_getsql.py  fine_tuning.py  llama3_instruct_nav.yaml  merge_model.py  run_defects4j_apr.py  run_defects4j_fl.py  run_repopilot.py  run_swe_bench.py  sglang.py  unslot_training.py  upload.py
src/: llm_multilspy.py  server.py  tools.py
tests/: test_zoek.py
(+1718 files in other folders)
